--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,10 +10,15 @@
     <meta name="generator" content={Astro.generator} />
     <title></title>
   </head>
-  <body>
+  <body class="flex flex-col justify-center items-center bg-slate-200 p-10 min-h-screen">
     <slot />
   </body>
 </html>
 
 <style>
+  @reference '../styles/global.css';
+
+  html, body {
+    @apply w-screen h-screen;
+  }
 </style>
