fix: layout shift after adding SimpleAnalytics

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -14,7 +14,9 @@ import { SimpleAnalytics } from 'astro-simpleanalytics-plugin'
   </head>
   <body>
     <slot />
-    <SimpleAnalytics />
+    <div class="hidden">
+      <SimpleAnalytics />
+    </div>
   </body>
 </html>
 
